# recipe-app

./: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  routes.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: directions.rs  ingredients.rs  lib.rs  recipe.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20240731_174231_create_ingredients_table.rs  m20240731_181644_create_recipes_table.rs  m20240731_190711_create_directions_table.rs
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  recipe_mutation.rs
src-tauri/src/: main.rs
src-tauri/src/controllers/: auth.rs  mod.rs  recipes.rs
src-tauri/src/models/: mod.rs  recipes.rs  response.rs
src/@types/: meal.ts  recipe.ts
src/api/: meal.ts  recipes.ts
src/components/: header.tsx  input-with-unit.tsx  recipe-card.tsx
src/components/country-select/: countries.txt  index.tsx
src/components/fields/: measure-type-select.tsx
src/components/ui/: navigation-menu.tsx
src/configs/: constants.ts
src/lib/: api.ts  commands.ts
src/pages/: home.tsx  login.tsx
src/pages/_layouts/: app.tsx  auth.tsx
src/pages/recipes/: recipe-detail.tsx
src/pages/recipes/create-recipe/: create-recipe-form-context.tsx  index.tsx  schemas.ts
src/pages/recipes/create-recipe/components/: category-select.tsx  create-directions-form.tsx  create-ingredients-form.tsx  text-field.tsx
src/utils/: meal-convertor.ts
