[package]
name = "recipe_all"
version = "0.0.0"
description = "A Tauri App"
authors = ["lucassilva"]
edition = "2021"

[workspace]
members = [".", "entity", "service", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.29.0", features = ["full"] }
dotenvy = "0.15.7"

migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
