[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12" # sea-orm version
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
  "sqlx-postgres"
]
